2022-10-20T01:50:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3286252331 # 536
* notice: last 14d: unq all: 1 17
* notice: prev accum: outdated-unq outdated-all / unq all: 216 399 / 228 416
* notice: next accum: outdated-unq outdated-all / unq all: 217 400 / 228 417
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-10-05] / [2022-10-19]

2022-10-19T08:34:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3280001094 # 534
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 216 399 / 227 415
* notice: next accum: outdated-unq outdated-all / unq all: 216 399 / 228 416
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-19]

2022-10-18T01:54:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3270024837 # 530
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 216 399 / 226 414
* notice: next accum: outdated-unq outdated-all / unq all: 216 399 / 227 415
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-17]

2022-10-17T02:03:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3261841156 # 527
* notice: last 14d: unq all: 2 15
* notice: prev accum: outdated-unq outdated-all / unq all: 216 399 / 226 413
* notice: next accum: outdated-unq outdated-all / unq all: 216 399 / 226 414
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-16]

2022-10-16T08:23:17Z: