@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-20T01:50:03Z",
+  "timestamp" : "2022-10-20T16:31:23Z",
   "count_outdated" : 400,
   "uniques_outdated" : 217,
-  "count" : 417,
-  "uniques" : 228,
+  "count" : 418,
+  "uniques" : 229,
   "clones" : [
     {
       "timestamp": "2022-10-08T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-10-19T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
