@@ -1,3 +1,11 @@
+2022-10-20T16:31:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3291327234 # 538
+* notice: last 14d: unq all: 1 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 217 400 / 228 417
+* notice: next accum: outdated-unq outdated-all / unq all: 217 400 / 229 418
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-20]
+
 2022-10-20T01:50:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3286252331 # 536
 * notice: last 14d: unq all: 1 17
